Removed theme templates from backend, and moved FileUploadController to rest controllers