@@ -1,22 +1,18 @@
-package com.verduttio.cinemaapp.controller.thyme;
+package com.verduttio.cinemaapp.controller.rest;
 
 import java.io.IOException;
-import java.util.stream.Collectors;
+import java.util.List;
 
 import com.verduttio.cinemaapp.entity.storage.StorageFileNotFoundException;
 import com.verduttio.cinemaapp.service.StorageService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.servlet.mvc.method.annotation.MvcUriComponentsBuilder;
-import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 
 @Controller
@@ -32,14 +28,10 @@ public class FileUploadController {
     }
 
     @GetMapping
-    public String listUploadedFiles(Model model) throws IOException {
-
-        model.addAttribute("files", storageService.loadAll().map(
-                        path -> MvcUriComponentsBuilder.fromMethodName(FileUploadController.class,
-                                "serveFile", path.getFileName().toString()).build().toUri().toString())
-                .collect(Collectors.toList()));
-
-        return "uploadForm";
+    @ResponseBody
+    public List<?> listUploadedFiles() {
+        return storageService.loadAll().map(
+                path -> path.getFileName().toString()).toList();
     }
 
     @GetMapping("/{filename:.+}")
@@ -56,14 +48,9 @@ public class FileUploadController {
     }
 
     @PostMapping
-    public String handleFileUpload(@RequestParam("file") MultipartFile file,
-                                   RedirectAttributes redirectAttributes) {
-
+    public ResponseEntity<?> handleFileUpload(@RequestParam("file") MultipartFile file) {
         storageService.store(file);
-        redirectAttributes.addFlashAttribute("message",
-                "You successfully uploaded " + file.getOriginalFilename() + "!");
-
-        return "redirect:/files/images";
+        return ResponseEntity.ok().build();
     }
 
     @DeleteMapping("/{filename:.+}")
